--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,8 +5,13 @@
   </h3>
   <hr class="text-white">
   <div class="list-group list-reset">
-    <a href="#" class="list-group-item list-group-item-action">
-      Dashboard</a> 
+    <a *ngFor="let item of historial" 
+      href="#" 
+      (click)="buscar(item)"
+      class="list-group-item list-group-item-action text-center" >
+      {{item | titlecase }}
+    </a> 
   </div>
+
 </div>
-<!--  end Sidebar  -->
+<!--  end Sidebar -->
